--- a/resources/css/common/preprocessor-variables.less
+++ b/resources/css/common/preprocessor-variables.less
@@ -1,5 +1,11 @@
+/// Широкий формат (стили подключаются вместе с десктопными и перекрывают их) ///
+
+// точка подключения широкого формата
+// (минимальная ширина)
+@wide-min-width: 1281px;
+
 @wide-min-width: 1400px;
-@desktop-min-width: 1200px;
+@desktop-min-width: 1100px;
 @mobile-max-width: 640px;
 
 @tab-max-width: (@desktop-min-width - 0.1);
