--- a/resources/css/app.less
+++ b/resources/css/app.less
@@ -4,17 +4,17 @@
 @import 'common/common';
 @import 'common/responsive';
 
-/*@import 'layout/typo/index';*/
 
 
+@import 'layout/header/index';
 @import 'layout/nav/index';
-
-
-
+@import 'layout/typo/index';
+@import 'layout/page/index';
+@import 'layout/footer/index';
 
 
 
 * {
-  outline: 1px solid rgba(140,140,0,0.2);
+  // outline: 1px solid rgba(140,140,0,0.2);
 }
 
