--- a/resources/css/common/common.less
+++ b/resources/css/common/common.less
@@ -14,6 +14,7 @@ body{
   -webkit-font-smoothing: subpixel-antialiased !important;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility:    hidden;
+  scrollbar-gutter: stable;
 
   @media (min-width: 320px) {
     overflow-x: hidden;
