--- a/resources/css/layout/typo/mobile.less
+++ b/resources/css/layout/typo/mobile.less
@@ -1,51 +1,49 @@
-h1 {
-  font-size: 2.074em;
-}
-
-h2 {
-  font-size: 1.5em;
-  margin-bottom: 20px;
-}
-
-h3 {
-  font-size: 1.3em;
-}
-
-h4, h4, h5, h6 {
-  font-size: 1.2em;
-}
-
-main {
-  font-size: 18px;
-}
-
-.content-standart {
-
-  blockquote {
-    .font-header;
-    position: relative;
-    border-top: 0.5px solid #bfbfbf;
-    border-bottom: 0.5px solid #bfbfbf;
-    padding: 37px 0 40px;
-    padding-left: 30px;
-    font-size: 20px;
-    &:before {
-      top: 5px;
-    }
+  h1 {
+    font-size: 2.074rem;
   }
 
-  table {
-    font-size: 0.8em;
-    letter-spacing: -0.6px;
+  h2 {
+    font-size: 1.5rem;
+    margin-bottom: 20px;
   }
-  tr {
-    & td:first-child,
-    & th:first-child {
-      padding-left: 10px;
+
+  h3 {
+    font-size: 1.3rem;
+  }
+
+  h4, h4, h5, h6 {
+    font-size: 1.2rem;
+  }
+
+  main {
+  }
+
+  .content-standart {
+
+    blockquote {
+      position: relative;
+      border-top: 0.5px solid #bfbfbf;
+      border-bottom: 0.5px solid #bfbfbf;
+      padding: 37px 0 40px;
+      padding-left: 30px;
+      font-size: 20px;
+      &:before {
+        top: 5px;
+      }
     }
-    & td:last-child,
-    & th:last-child {
-      padding-right: 10px;
+
+    table {
+      font-size: 0.8em;
+      letter-spacing: -0.6px;
+    }
+    tr {
+      & td:first-child,
+      & th:first-child {
+        padding-left: 10px;
+      }
+      & td:last-child,
+      & th:last-child {
+        padding-right: 10px;
+      }
     }
   }
-}
