--- a/resources/css/app.less
+++ b/resources/css/app.less
@@ -12,6 +12,10 @@
 @import 'layout/page/index';
 @import 'layout/footer/index';
 
+@import 'block/partner/index';
+@import 'block/about/index';
+
+
 
 
 * {
