--- a/resources/css/layout/footer/common.less
+++ b/resources/css/layout/footer/common.less
@@ -64,3 +64,10 @@
 	margin-top: auto;
 }
 .footer__bottom-text {}
+
+
+@media screen and (min-width: 641px) and (max-width: 850px)  {
+  .footer__bg {
+    background: rgba(0,0,0,0.5);
+  }
+}
