--- a/resources/css/layout/typo/common.less
+++ b/resources/css/layout/typo/common.less
@@ -1,17 +1,19 @@
 body {
   font-display: swap;
   font-family: 'Open Sans', sans-serif;
-  font-size: 18px;
-  line-height: 1.4;
+  font-size: 20px;
+  line-height: 1.5;
   color: #000000;
+
+
 }
 
 
 h1, h2 {
   line-height: 1.2;
-  margin-top: 1.4em;
   margin-bottom: 0.7em;
-  font-weight: 300;
+  font-weight: 500;
+
 }
 
 h1 + h2, h1 + h3, h1 + h4,
@@ -23,14 +25,19 @@ h3 + h4 {
 h1 {
   font-size: 60px;
   line-height: 1;
-  font-weight: 300;
   margin-top: 0;
+
+  background-image: linear-gradient(92deg, #0a4572, #15a049 80%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;  
 }
 
 h2 {
-  font-size: 36px;
-  font-weight: 300;
+  font-size: 40px;
   margin-bottom: 30px;
+  margin-top: 1.6em;  
+  font-weight: 600;  
 }
 
 h3 {
@@ -68,7 +75,11 @@ p {
   max-width: 900px;
 }
 
-main,
+address {
+  font-style: normal;
+}
+
+
 .content-standart {
 
   p, ul, ol, blockquote, .p-pseudo  {
@@ -99,10 +110,11 @@ main,
     border-bottom: 0.5px solid #bfbfbf;
     padding: 37px 0 40px;
     padding-left: 40px;
-    font-size: 25px;
+    font-size: 24px;
     font-weight: 300;
     line-height: 1.4;
-    margin: 55px 0;
+    margin: 45px 0;
+    max-width: 900px;
 
     &:before {
       content: "«";
@@ -110,7 +122,7 @@ main,
       left: 0;
       top: 10px;
       font-size: 60px;
-      color: #000000;
+      color: #0c648c;
     }
 
     p {
@@ -189,6 +201,12 @@ main,
     &.no-border {
       border: none;
     }
+  }
+
+  picture {
+    display: inline-block;
+    margin-top: 1em;
+    margin-bottom: 1em;
   }
 
   i {
