--- a/resources/css/app.less
+++ b/resources/css/app.less
@@ -3,8 +3,7 @@
 @import 'common/normalize';
 @import 'common/common';
 @import 'common/responsive';
-
-
+@import 'common/link';
 
 @import 'layout/header/index';
 @import 'layout/nav/index';
@@ -15,7 +14,14 @@
 @import 'block/partner/index';
 @import 'block/about/index';
 
-
+@import 'block/about/index';
+@import 'block/articles/index';
+@import 'block/components/index';
+@import 'block/contacts/index';
+@import 'block/home/index';
+@import 'block/partner/index';
+@import 'block/posts/index';
+@import 'block/services/index';
 
 
 * {
