--- a/resources/css/common/common.less
+++ b/resources/css/common/common.less
@@ -21,6 +21,16 @@ body{
   }
 }
 
+.body-wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+
+  main {
+    flex-grow: 1;
+  }
+}
+
 img {
   max-width: 100%;
   vertical-align:bottom;
