--- a/resources/css/layout/footer/common.less
+++ b/resources/css/layout/footer/common.less
@@ -8,11 +8,17 @@
 	background-position: 50% 0;
 	background-repeat: no-repeat;
 	text-shadow: 1px 1px 0 #000000;
+	border-top: 3px solid #d8b103;
+	font-size: 18px;
 
 	a {
+		.no-border;
 		color: #ffffff;
-		text-decoration: none;
-	}	
+		&:hover {
+			color: #d8b103;
+		}
+	}
+		
 }
 .footer__bg {
 	position: absolute;
@@ -63,7 +69,9 @@
 	text-align: center;
 	margin-top: auto;
 }
-.footer__bottom-text {}
+.footer__bottom-text {
+	opacity: 0.8;
+}
 
 
 @media screen and (min-width: 641px) and (max-width: 850px)  {
