--- a/resources/css/app.less
+++ b/resources/css/app.less
@@ -22,7 +22,7 @@
 @import 'block/partner/index';
 @import 'block/posts/index';
 @import 'block/services/index';
-
+@import 'block/applications/index';
 
 * {
   // outline: 1px solid rgba(140,140,0,0.2);
