--- a/resources/css/layout/header/common.less
+++ b/resources/css/layout/header/common.less
@@ -61,9 +61,11 @@
 
 .header__lng {}
 .header__lng-list {
+	margin: 0;
+	padding: 0;
 	display: flex;
 	flex-direction: column;
-	gap: 5px;
+	gap: 6px;
 }
 .header__lng-item {
 	list-style-type: none;
