--- a/resources/css/block/about/common.less
+++ b/resources/css/block/about/common.less
@@ -6,6 +6,11 @@
     margin-top: 1.4em;
 }
 
+.about__list-wrap {
+    position: relative;
+    background: 100% 0 no-repeat;
+}
+
 .about__list {
     padding: 0;
     margin: 30px 0;
@@ -55,3 +60,8 @@
 }
 
 .about__item-text {}
+
+.about__firm {
+    color: #0A4771;
+    font-weight: bold;
+}
