--- a/resources/css/layout/header/common.less
+++ b/resources/css/layout/header/common.less
@@ -3,6 +3,8 @@
 	background-image: linear-gradient(-65deg, #071E01, #0d312c, #103235, #1a5563, #3F5D65, #3F5D65, #205d8d, #333168, #12111d);
 	color: #ffffff;
 	border-bottom: 3px solid #d8b103;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 .header__inner {
 	margin: 0 auto;
@@ -10,33 +12,37 @@
 	padding: 0 30px;
 }
 .header__row {
-	display: flex;
-	align-items: center;
-	gap: 10px 20px;
+    min-height: 100px;	
+	display: grid;
+	grid-template-columns: 200px 1fr 100px;
+	grid-template-rows: auto auto;
+	grid-template-areas:
+    "logo top lng"
+    "logo nav lng";
 }
 .header__logo-col {
-	flex-grow: 0;
-	order: 1;
+	grid-area: logo;
 }
 .header__logo-link {
 
 }
 .header__logo-box {
 	position: relative;
-	width: 200px;
-	height: 100px;
-	transform: translateY(-60px);
-
 	img {
 		-webkit-filter: drop-shadow(3px 5px 5px rgba(0,0,0,0.5));
 		filter: drop-shadow(3px 5px 5px rgba(0,0,0,0.5));
 	}
 }
+.header__top-col {
+	grid-area: top;
+}
 .header__nav-col {
+	grid-area: nav;
 	flex-grow: 2;
 	order: 2;
 }
 .header__r-col {
+	grid-area: lng;
 	flex-grow: 0;
 	order: 3;
 }
@@ -44,6 +50,8 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
+	align-items: center;
+	height: 100%;
 	gap: 10px;
 }
 .header__r-item {
@@ -58,7 +66,6 @@
 		color: #fedd4b;
 	}
 }
-
 .header__lng {}
 .header__lng-list {
 	margin: 0;
@@ -94,5 +101,18 @@
 		width: 28px;
 		height: 22px;
 		margin-left: -1px;
+	}
+}
+
+// таблетный вариант широкий
+@media screen and (min-width: (1021px)) and (max-width: @tab-max-width)  {
+	.header__logo-col {
+		height: 100px;
+	}
+	.header__logo-box {
+		position: relative;
+		width: 200px;
+		height: 100px;
+		transform: translateY(15px);
 	}
 }
