--- a/resources/css/layout/header/tab.less
+++ b/resources/css/layout/header/tab.less
@@ -1,25 +1,34 @@
+.header {
+	padding-bottom: 20px;
+}
 .header__row {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	max-width: 1000px;
-	margin: 0 auto;
+    // min-height: 156px;	
+	display: grid;
+	grid-template-columns: 200px 1fr 100px;
+	grid-template-rows: auto auto;
+	grid-template-areas:
+    "logo top lng"
+    "logo nav nav";
 }
 .header__logo-col {
-	flex-grow: 0;
-	order: 1;
+	display: flex;
+	align-items: center;
+	a {
+		width: 100%;
+	}
 }
-
-.header__r-col {
-	flex-grow: 0;
-	order: 2;
-}
-.header__nav-col {
-	order: 3;
+.header__logo-box {
+	position: relative;
 	width: 100%;
+	height: 100%;
 }
-
-.header__r-item {
+.header__contact {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
 }
-.header__tel {}
-.header__email {}
+.header__logo-box {
+	// transform: translateY(-2px);
+}
