--- a/resources/css/layout/nav/common.less
+++ b/resources/css/layout/nav/common.less
@@ -1,8 +1,9 @@
 // общие стили
 .nav {
-	padding: 20px 0;
-	max-width: 650px;
+	max-width: 780px;
 	margin: 0 auto;
+	padding: 0 40px;
+	padding-top: 20px;
 }
 .nav__list {
 	padding: 0;
@@ -13,7 +14,6 @@
 	gap:  10px 10px;
 }
 .nav__link-inner {
-	.link-basic-mono(rgba(255,255,255,0.9));
 	white-space: nowrap;
 }
 .nav__link-active {
@@ -22,12 +22,25 @@
 	text-shadow: 1px 1px 10px rgba(255,255,255,0.5);
 }
 .nav__item {
+	.no-link();
 	line-height: 1.3;
 	min-height: 32px;
+
+	.nav__link-inner {
+		.link-basic-mono(rgba(255,255,255,0.9));
+	}
+	
 	&:hover .nav__link-inner {
 		.link-basic-mono(#fedd4b);
 	}
 }
 
+
+// таблетный вариант широкий
+@media screen and (min-width: (@tab-min-width)) and (max-width: 1020px)  {
+	.nav {
+		max-width: 490px;
+	}
+}
 
 
