--- a/resources/css/layout/page/common.less
+++ b/resources/css/layout/page/common.less
@@ -3,7 +3,8 @@
   margin: 0 auto;
 }
 .page__title {
-  padding-top: 65px;
+  padding-top: 40px;
+  text-align: center;
 }
 .page__bottom {
 	padding-top: 120px;
