--- a/resources/css/app.less
+++ b/resources/css/app.less
@@ -23,6 +23,7 @@
 @import 'block/posts/index';
 @import 'block/services/index';
 @import 'block/applications/index';
+@import 'block/application/index';
 
 * {
   // outline: 1px solid rgba(140,140,0,0.2);
