--- a/resources/css/block/applications/common.less
+++ b/resources/css/block/applications/common.less
@@ -7,12 +7,15 @@
 	grid-gap: 70px 50px;
 }
 .applications__card {}
-.applications__img-box {}
+.applications__img-box {
+	margin-bottom: 30px;
+}
 .applications__card-title-row {
 	margin-top: 15px;
+	font-size: 22px;
 }
 .applications__card-title {
-	font-size: 25px;
+	
 }
 .applications__card-link {
 	.link-basic();
