--- a/resources/css/layout/page/common.less
+++ b/resources/css/layout/page/common.less
@@ -6,6 +6,15 @@
   padding-top: 40px;
   text-align: center;
 }
+.page__title--one {
+  padding-top: 50px;
+  padding-bottom: 15px;
+  text-align: left;
+  h1 {
+  	font-size: 35px;
+  	line-height: 1.2;
+  }
+}
 .page__bottom {
 	padding-top: 120px;
 }
