--- a/resources/css/layout/typo/common.less
+++ b/resources/css/layout/typo/common.less
@@ -24,7 +24,8 @@ h1 {
   line-height: 1.3;
   margin-top: 0;
 
-  background-image: linear-gradient(92deg, #0a4572, #15a049 80%);
+  display: inline-block;
+  background-image: linear-gradient(92deg, #0a5872, #107f6f 80%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;  
@@ -103,14 +104,14 @@ address {
 
   blockquote {
     position: relative;
-    border-top: 0.5px solid #bfbfbf;
-    border-bottom: 0.5px solid #bfbfbf;
+    // border-top: 0.5px solid #bfbfbf;
+    // border-bottom: 0.5px solid #bfbfbf;
     padding: 37px 0 40px;
     padding-left: 40px;
     font-size: 24px;
     font-weight: 300;
     line-height: 1.4;
-    margin: 45px 0;
+    // margin: 45px 0;
     max-width: 900px;
 
     &:before {
@@ -128,6 +129,13 @@ address {
 
     & img {
       margin-top: 20px;
+    }
+
+    cite {
+      display: block;
+      text-align: right;
+      font-size: 0.8em;
+      padding-right: 10px;
     }
   }
 
@@ -164,7 +172,7 @@ address {
         height: 6px;
         left: 0;
         top: 0.60em;
-        background-color: #000000;
+        background-color: #255864;
         border-radius: 50%;
       }
     }
