--- a/resources/css/block/contacts/mobile.less
+++ b/resources/css/block/contacts/mobile.less
@@ -1,7 +1,11 @@
 .contacs__connect-list {
 	gap: 20px;
 }
-
+.contacs__list {
+	li {
+		margin-bottom: 10px;
+	}
+}
 .contacs__dir-title {
 	font-size: 20px;
 	font-weight: bold;
