--- a/resources/css/layout/nav/common.less
+++ b/resources/css/layout/nav/common.less
@@ -9,6 +9,7 @@
 	padding: 0;
 	margin: 0 auto;
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-between;
 	align-items: center;
 	gap:  10px 10px;
@@ -21,7 +22,7 @@
 	white-space: nowrap;
 	text-shadow: 1px 1px 10px rgba(255,255,255,0.5);
 }
-.nav__item {
+.nav__link {
 	.no-link();
 	line-height: 1.3;
 	min-height: 32px;
