--- a/resources/css/layout/header/common.less
+++ b/resources/css/layout/header/common.less
@@ -1,6 +1,6 @@
 .header {
 	background-color: #000000;
-	background-image: linear-gradient(-65deg, #071E01, #0d312c, #103235, #1a5563, #3F5D65, #3F5D65, #205d8d, #333168, #12111d);
+	background-image: linear-gradient(-65deg, #071E01, #02391e, #023d36, #0f5454, #175762, #25607d, #205d8d, #333168, #12111d);
 	color: #ffffff;
 	border-bottom: 3px solid #d8b103;
 	padding-top: 20px;
