fix contact and description

--- a/resources/css/block/applications/common.less
+++ b/resources/css/block/applications/common.less
@@ -9,6 +9,9 @@
 .applications__card {}
 .applications__img-box {
 	margin-bottom: 30px;
+	img {
+		object-fit: cover;
+	}
 }
 .applications__card-title-row {
 	margin-top: 15px;
