--- a/resources/css/block/applications/mobile.less
+++ b/resources/css/block/applications/mobile.less
@@ -4,6 +4,9 @@
 }
 .applications__img-box {
 	position: relative;
+	img {
+		object-fit: cover;
+	}
 }
 .applications__card-title {
 	position: relative;
