--- a/resources/css/layout/nav/mobile.less
+++ b/resources/css/layout/nav/mobile.less
@@ -8,5 +8,11 @@
 }
 .nav__item {
 	display: block;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
+}
+.nav__item.is-active, 
+.nav__link {
+	display: inline-block;
+	padding-top: 10px;
+	padding-bottom: 10px;	
 }
