--- a/resources/css/layout/nav/common.less
+++ b/resources/css/layout/nav/common.less
@@ -14,6 +14,11 @@
 	align-items: center;
 	gap:  10px 10px;
 }
+.nav__item {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
 .nav__link-inner {
 	white-space: nowrap;
 }
