--- a/resources/css/layout/page/common.less
+++ b/resources/css/layout/page/common.less
@@ -1,6 +1,9 @@
 .page {
   max-width: 1000px;
   margin: 0 auto;
+  a {
+    .link-basic(#096977, #0099B8);
+  }
 }
 .page__title {
   padding-top: 40px;
