--- a/resources/css/layout/footer/common.less
+++ b/resources/css/layout/footer/common.less
@@ -2,7 +2,7 @@
 	display: flex;
 	justify-content: center;
 	position: relative;
-	height: 420px;
+	min-height: 420px;
 	color: #ffffff;
 	background-color: #060917;
 	background-position: 50% 0;
@@ -21,11 +21,6 @@
 		
 }
 .footer__bg {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
 	display: flex;
 	justify-content: center;
 	width: 100%;
