--- a/resources/css/block/about/common.less
+++ b/resources/css/block/about/common.less
@@ -16,12 +16,14 @@
     margin: 30px 0;
     max-width: 745px;
 }
+
 .about__item {
     list-style-type: none;
     margin: 0;
     padding: 0;
     margin-bottom: 30px;
 }
+
 .about__item-row {
     display: flex;
     gap: 20px;
@@ -34,6 +36,7 @@
     flex-shrink: 0;
     margin-top: 3px;
 }
+
 .about__item-icon svg {
     display: block;
     width: 50px;
@@ -43,18 +46,23 @@
 .about__icon-dollar {
     fill: #2dd068;
 }
+
 .about__icon-recycling {
     fill: #03e5bd;
 }
+
 .about__icon-snowflake {
     fill: #00eafc;
 }
+
 .about__icon-drop {
     fill: #00cfff;
 }
+
 .about__icon-smell {
     fill: #2492e9;
 }
+
 .about__icon-gear {
     fill: #5c58c5;
 }
@@ -62,6 +70,6 @@
 .about__item-text {}
 
 .about__firm {
-    color: #0A4771;
+    color: #0a4771;
     font-weight: bold;
 }
