--- a/resources/css/block/applications/common.less
+++ b/resources/css/block/applications/common.less
@@ -1,25 +1,28 @@
 .applications__main {
-	padding-top: 10px;
+  padding-top: 10px;
 }
+
 .applications__list {
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	grid-gap: 70px 50px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 70px 50px;
 }
-.applications__card {}
+
 .applications__img-box {
-	margin-bottom: 30px;
-	img {
-		object-fit: cover;
-	}
+  margin-bottom: 30px;
+
+  img {
+    object-fit: cover;
+  }
 }
+
 .applications__card-title-row {
-	margin-top: 15px;
-	font-size: 22px;
+  margin-top: 15px;
+  font-size: 22px;
 }
-.applications__card-title {
-	
-}
+
+.applications__card-title {}
+
 .applications__card-link {
-	.link-basic();
+  .link-basic();
 }
