--- a/resources/css/common/responsive.less
+++ b/resources/css/common/responsive.less
@@ -1,14 +1,20 @@
 .container {
-	max-width: 1200px;
-	min-width: 320px;
-	padding-left: 50px;
-	padding-right: 50px;
-	margin: 0 auto;
+  max-width: 1200px;
+  min-width: 320px;
+  padding-left: 50px;
+  padding-right: 50px;
+  margin: 0 auto;
 }
 
-.only-desktop, .only-desktop-ib, .only-desktop-i,
-.only-tab, .only-tab-ib, .only-tab-i,
-.only-mobile, .only-mobile-ib, .only-mobile-i {
+.only-desktop,
+.only-desktop-ib,
+.only-desktop-i,
+.only-tab,
+.only-tab-ib,
+.only-tab-i,
+.only-mobile,
+.only-mobile-ib,
+.only-mobile-i {
   display: none;
 }
 
