--- a/resources/css/block/articles/common.less
+++ b/resources/css/block/articles/common.less
@@ -1,30 +1,36 @@
 .articles__main {
-	padding-top: 20px;
+  padding-top: 20px;
 }
+
 .articles__list {
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	grid-gap: 70px 50px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 70px 50px;
 }
+
 .articles__card {
-	display: flex;
-	align-items: center;
-	gap: 15px;
+  display: flex;
+  align-items: center;
+  gap: 15px;
 }
+
 .articles__icon {
-	width: 55px;
-	height: 60px;
-	svg {
-		width: 60px;
-		height: 60px;
-		fill: #031726;
-	}
+  width: 55px;
+  height: 60px;
+
+  svg {
+    width: 60px;
+    height: 60px;
+    fill: #031726;
+  }
 }
-.articles__card-title-row {
-}
+
+.articles__card-title-row {}
+
 .articles__card-title {
-	font-size: 25px;
+  font-size: 25px;
 }
+
 .articles__card-link {
-	.link-basic(#096977,#031726);
+  .link-basic(#096977, #031726);
 }
