--- a/resources/css/common/common.less
+++ b/resources/css/common/common.less
@@ -1,19 +1,20 @@
 *,
 *:before,
-*:after{
+*:after {
   box-sizing: border-box;
 }
 
-html, body {
-    height: 100%;
-    width: 100%;
+html,
+body {
+  height: 100%;
+  width: 100%;
 }
 
-body{
+body {
   position: relative;
   -webkit-font-smoothing: subpixel-antialiased !important;
   -webkit-backface-visibility: hidden;
-  -moz-backface-visibility:    hidden;
+  -moz-backface-visibility: hidden;
   scrollbar-gutter: stable;
 
   @media (min-width: 320px) {
@@ -33,7 +34,7 @@ body{
 
 img {
   max-width: 100%;
-  vertical-align:bottom;
+  vertical-align: bottom;
 }
 
 .hidden {
@@ -55,15 +56,16 @@ img {
 }
 
 .no-margin {
-  margin: 0!important;
+  margin: 0 !important;
 }
 
 // обнуление отступов
 .no-last-margin {
-  & > *:first-child {
+  &>*:first-child {
     margin-top: 0;
   }
-  & > *:last-child {
+
+  &>*:last-child {
     margin-bottom: 0;
   }
 }
@@ -73,6 +75,7 @@ img {
   position: relative;
   width: 100%;
   padding-top: 55%;
+
   iframe {
     position: absolute;
     top: 0;
