--- a/resources/css/layout/footer/common.less
+++ b/resources/css/layout/footer/common.less
@@ -1,76 +1,88 @@
 .footer {
-	display: flex;
-	justify-content: center;
-	position: relative;
-	min-height: 420px;
-	color: #ffffff;
-	background-color: #060917;
-	background-position: 50% 0;
-	background-repeat: no-repeat;
-	text-shadow: 1px 1px 0 #000000;
-	border-top: 3px solid #d8b103;
-	font-size: 18px;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  min-height: 420px;
+  color: #ffffff;
+  background-color: #060917;
+  background-position: 50% 0;
+  background-repeat: no-repeat;
+  text-shadow: 1px 1px 0 #000000;
+  border-top: 3px solid #d8b103;
+  font-size: 18px;
 
-	a {
-		.no-border;
-		color: #ffffff;
-		&:hover {
-			color: #d8b103;
-		}
-	}
-		
+  a {
+    .no-border;
+    color: #ffffff;
+
+    &:hover {
+      color: #d8b103;
+    }
+  }
+
 }
+
 .footer__bg {
-	display: flex;
-	justify-content: center;
-	width: 100%;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
+
 .footer__inner {
-	width: 100%;
-	max-width: 1130px;
-	display: flex;
-	flex-direction: column;
-	padding: 0 30px;
-	padding-top: 40px;
-	padding-bottom: 15px;
+  width: 100%;
+  max-width: 1130px;
+  display: flex;
+  flex-direction: column;
+  padding: 0 30px;
+  padding-top: 40px;
+  padding-bottom: 15px;
 }
+
 .footer__row {
-	display: flex;
-	justify-content: space-between;
-	padding-left: 30px;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 30px;
 }
+
 .footer__col {}
+
 .footer__col--l {}
+
 .footer__col--r {
-	max-width: 230px;
+  max-width: 230px;
 }
+
 .footer__list {
-	padding: 0;
-	margin-bottom: 14px;
+  padding: 0;
+  margin-bottom: 14px;
 }
+
 .footer__list--l {
-	li {
-		list-style-type: none;
-		margin-bottom: 14px;
-	}
+  li {
+    list-style-type: none;
+    margin-bottom: 14px;
+  }
 }
+
 .footer__list--r {
-	li {
-		list-style-type: none;
-		margin-bottom: 11px;
-	}
+  li {
+    list-style-type: none;
+    margin-bottom: 11px;
+  }
 }
+
 .footer__bottom {
-	text-align: center;
-	margin-top: auto;
+  text-align: center;
+  margin-top: auto;
 }
+
 .footer__bottom-text {
-	opacity: 0.8;
+  opacity: 0.8;
 }
 
 
-@media screen and (min-width: 641px) and (max-width: 850px)  {
+@media screen and (min-width: 641px) and (max-width: 850px) {
   .footer__bg {
-    background: rgba(0,0,0,0.5);
+    background: rgba(0, 0, 0, 0.5);
   }
 }
