--- a/resources/css/layout/footer/mobile.less
+++ b/resources/css/layout/footer/mobile.less
@@ -1,29 +1,35 @@
 .no-webp .footer {
-    background-image: url('/storage/images/design/mob-cr/bg-footer.jpg');
+  background-image: url('/storage/images/design/mob-cr/bg-footer.jpg');
 }
+
 .webp .footer {
-    background-image: url('/storage/images/design/mob-cr/bg-footer.webp');
+  background-image: url('/storage/images/design/mob-cr/bg-footer.webp');
 }
+
 .footer__bg {
-	background: rgba(0,0,0,0.5);
+  background: rgba(0, 0, 0, 0.5);
 }
+
 .footer__inner {
-	padding: 0 20px;
-	padding-top: 20px;
-	padding-bottom: 15px;	
-	max-width: 400px;
-	margin: 0 auto;
+  padding: 0 20px;
+  padding-top: 20px;
+  padding-bottom: 15px;
+  max-width: 400px;
+  margin: 0 auto;
 }
+
 .footer__row {
-	display: block;
-	padding-left: 0;
+  display: block;
+  padding-left: 0;
 }
+
 .footer__col--r {
-	max-width: 100%;
+  max-width: 100%;
 }
+
 .footer__list {
-	li {
-		list-style-type: none;
-		margin-bottom: 5px;
-	}
+  li {
+    list-style-type: none;
+    margin-bottom: 5px;
+  }
 }
