--- a/resources/css/block/posts/common.less
+++ b/resources/css/block/posts/common.less
@@ -1,40 +1,47 @@
 .posts__main {
-	padding-top: 10px;
+  padding-top: 10px;
 }
-.posts__list {
-	display: grid;
-	grid-template-columns: repeat(1, 1fr);
-	grid-gap: 70px 50px;
-}
-.posts__card {
 
+.posts__list {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 70px 50px;
 }
+
+.posts__card {}
+
 .posts__card-row {
-	display: flex;
-	gap: 25px;	
+  display: flex;
+  gap: 25px;
 }
+
 .posts__img-box {
-	position: relative;
-	border: 1px solid #cccccc;
-	width: 150px;
-	flex-shrink: 0;
-	img {
-		
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
-	}
+  position: relative;
+  border: 1px solid #cccccc;
+  width: 150px;
+  flex-shrink: 0;
+
+  img {
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
+
 .posts__content {}
+
 .posts__card-title-row {}
+
 h2.posts__card-title,
 .posts__card-title {
-	margin-top: 0;
-	font-size: 25px;
+  margin-top: 0;
+  font-size: 25px;
 }
+
 .posts__card-text {}
