--- a/resources/css/layout/nav/common.less
+++ b/resources/css/layout/nav/common.less
@@ -1,52 +1,55 @@
 // общие стили
 .nav {
-	max-width: 780px;
-	margin: 0 auto;
-	padding: 0 40px;
-	padding-top: 20px;
+  max-width: 780px;
+  margin: 0 auto;
+  padding: 0 40px;
+  padding-top: 20px;
 }
-.nav__list {
-	padding: 0;
-	margin: 0 auto;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	align-items: center;
-	gap:  10px 10px;
-}
-.nav__item {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-}
-.nav__link-inner {
-	white-space: nowrap;
-}
-.nav__link-active {
-	color: #ffffff;
-	white-space: nowrap;
-	text-shadow: 1px 1px 10px rgba(255,255,255,0.5);
-}
-.nav__link {
-	.no-link();
-	line-height: 1.3;
-	min-height: 32px;
 
-	.nav__link-inner {
-		.link-basic-mono(rgba(255,255,255,0.9));
-	}
-	
-	&:hover .nav__link-inner {
-		.link-basic-mono(#fedd4b);
-	}
+.nav__list {
+  padding: 0;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px 10px;
+}
+
+.nav__item {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav__link-inner {
+  white-space: nowrap;
+}
+
+.nav__link-active {
+  color: #ffffff;
+  white-space: nowrap;
+  text-shadow: 1px 1px 10px rgba(255, 255, 255, 0.5);
+}
+
+.nav__link {
+  .no-link();
+  line-height: 1.3;
+  min-height: 32px;
+
+  .nav__link-inner {
+    .link-basic-mono(rgba(255, 255, 255, 0.9));
+  }
+
+  &:hover .nav__link-inner {
+    .link-basic-mono(#fedd4b);
+  }
 }
 
 
 // таблетный вариант широкий
-@media screen and (min-width: (@tab-min-width)) and (max-width: 1020px)  {
-	.nav {
-		max-width: 490px;
-	}
+@media screen and (min-width: (@tab-min-width)) and (max-width: 1020px) {
+  .nav {
+    max-width: 490px;
+  }
 }
-
-
