--- a/resources/css/layout/typo/common.less
+++ b/resources/css/layout/typo/common.less
@@ -6,16 +6,20 @@ body {
   color: #000000;
 }
 
-h1, h2 {
+h1,
+h2 {
   line-height: 1.3;
   margin-bottom: 0.6em;
   font-weight: 500;
 
 }
 
-h1 + h2, h1 + h3, h1 + h4,
-h2 + h3, h2 + h4,
-h3 + h4 {
+h1+h2,
+h1+h3,
+h1+h4,
+h2+h3,
+h2+h4,
+h3+h4 {
   margin-top: 0.8em;
 }
 
@@ -28,14 +32,14 @@ h1 {
   background-image: linear-gradient(92deg, #0a5872, #107f6f 80%);
   background-clip: text;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;  
+  -webkit-text-fill-color: transparent;
 }
 
 h2 {
   font-size: 40px;
   margin-bottom: 30px;
-  margin-top: 1.6em;  
-  font-weight: 600;  
+  margin-top: 1.6em;
+  font-weight: 600;
 }
 
 h3 {
@@ -80,25 +84,42 @@ address {
 
 .content-standart {
 
-  p, ul, ol, blockquote, .p-pseudo  {
+  p,
+  ul,
+  ol,
+  blockquote,
+  .p-pseudo {
     margin: 0.5em 0 1em;
   }
 
 
-  ul, ol {
-    & > *:first-child {
+  ul,
+  ol {
+    &>*:first-child {
       margin-top: 0;
     }
-    & > *:last-child {
+
+    &>*:last-child {
       margin-bottom: 0;
     }
   }
 
-  h1, h2, h3, h4, h5, h6, p, ul, ol {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p,
+  ul,
+  ol {
     max-width: 900px;
   }
 
-  h3, h4, h5, h6 {
+  h3,
+  h4,
+  h5,
+  h6 {
     margin-bottom: 10px;
   }
 
@@ -123,9 +144,7 @@ address {
       color: #0c648c;
     }
 
-    p {
-
-    }
+    p {}
 
     & img {
       margin-top: 20px;
@@ -147,15 +166,19 @@ address {
   }
 
   ol {
-    counter-reset: li; /* Инициализируем счетчик */
+    counter-reset: li;
+    /* Инициализируем счетчик */
     margin-top: 10px;
     padding: 0;
-    > li {
+
+    >li {
       &:before {
         position: absolute;
         left: 0;
-        content:counter(li)+". "; /* В качестве данных используем счетчик */
-        counter-increment:li; /* Увеличиваем значение счетчика на 1 */
+        content: counter(li)+". ";
+        /* В качестве данных используем счетчик */
+        counter-increment: li;
+        /* Увеличиваем значение счетчика на 1 */
       }
     }
   }
@@ -163,8 +186,10 @@ address {
   ul {
     margin-top: 10px;
     padding-left: 0;
-    > li {
+
+    >li {
       padding-left: 20px;
+
       &:before {
         content: "";
         position: absolute;
@@ -178,12 +203,19 @@ address {
     }
   }
 
-  h3 + ul, h4 + ul, h5 + ul, h6 + ul,
-  h3 + ol, h4 + ol, h5 + ol, h6 + ol {
+  h3+ul,
+  h4+ul,
+  h5+ul,
+  h6+ul,
+  h3+ol,
+  h4+ol,
+  h5+ol,
+  h6+ol {
     margin-top: 15px;
   }
 
-  p + ul, p + ol {
+  p+ul,
+  p+ol {
     margin-top: -5px;
   }
 
@@ -200,6 +232,7 @@ address {
   }
 
   img {
+
     // margin: 10px 0;
     // margin-right: 10px;
     // border: 1px solid #b0b0b0;
@@ -234,8 +267,7 @@ address {
       box-shadow: 0 12px 0 0 #ffffff;
     }
 
-    &:hover img {
-    }
+    &:hover img {}
   }
 
   table {
@@ -246,6 +278,7 @@ address {
     margin-bottom: 30px;
     line-height: 1.2;
   }
+
   caption {
     font-size: 1.3em;
     line-height: 1.2;
@@ -253,77 +286,94 @@ address {
     margin-bottom: 0.4em;
     text-align: left;
   }
+
   th {
     font-weight: 700;
   }
+
   tr {
     background-color: #efefef;
+
     & td:first-child,
     & th:first-child {
       padding-left: 15px;
     }
+
     & td:last-child,
     & th:last-child {
       padding-right: 15px;
     }
   }
+
   tr.all,
   tr.result {
     background-color: #ECF3F9;
     font-weight: 700;
   }
+
   td,
   th {
     padding: 4px 10px;
     text-align: left;
   }
+
   .right1 {
     tr td:nth-child(1) {
       text-align: right;
     }
+
     tr th:nth-child(1) {
       text-align: right;
     }
   }
+
   .right2 {
     tr td:nth-child(2) {
       text-align: right;
     }
+
     tr th:nth-child(2) {
       text-align: right;
     }
   }
+
   .right3 {
     tr td:nth-child(3) {
       text-align: right;
     }
+
     tr th:nth-child(3) {
       text-align: right;
     }
   }
+
   .right4 {
     tr td:nth-child(4) {
       text-align: right;
     }
+
     tr th:nth-child(4) {
       text-align: right;
     }
   }
+
   .right5 {
-    tr td:nth-child(5){
+    tr td:nth-child(5) {
       text-align: right;
     }
-    tr th:nth-child(5){
+
+    tr th:nth-child(5) {
       text-align: right;
     }
   }
+
   .right6 {
-    tr td:nth-child(6){
+    tr td:nth-child(6) {
       text-align: right;
     }
-    tr th:nth-child(6){
+
+    tr th:nth-child(6) {
       text-align: right;
     }
   }
 }
-
