--- a/resources/css/layout/typo/mobile.less
+++ b/resources/css/layout/typo/mobile.less
@@ -11,12 +11,14 @@
     font-size: 1.3rem;
   }
 
-  h4, h4, h5, h6 {
+  h4,
+  h4,
+  h5,
+  h6 {
     font-size: 1.2rem;
   }
 
-  main {
-  }
+  main {}
 
   .content-standart {
 
@@ -27,6 +29,7 @@
       padding: 37px 0 40px;
       padding-left: 30px;
       font-size: 20px;
+
       &:before {
         top: 5px;
       }
@@ -36,11 +39,14 @@
       font-size: 0.8em;
       letter-spacing: -0.6px;
     }
+
     tr {
+
       & td:first-child,
       & th:first-child {
         padding-left: 10px;
       }
+
       & td:last-child,
       & th:last-child {
         padding-right: 10px;
